# ChangeLog for x11-terms/xterm
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.292 2010/01/24 17:39:18 ssuominen Exp $

*xterm-255 (24 Jan 2010)

  24 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> +xterm-255.ebuild:
  Version bump.

  19 Jan 2010; Raúl Porcel <armin76@gentoo.org> xterm-250.ebuild:
  s390 stable wrt #294958

  18 Jan 2010; Raúl Porcel <armin76@gentoo.org> xterm-250.ebuild:
  alpha/ia64/sh/sparc stable wrt #294958

  14 Jan 2010; Markus Meier <maekke@gentoo.org> xterm-250.ebuild:
  arm stable, bug #294958

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> xterm-250.ebuild:
  Stable for HPPA (bug #294958).

  27 Dec 2009; Joseph Jezak <josejx@gentoo.org> xterm-250.ebuild:
  Marked ppc stable for bug #294958.

  15 Dec 2009; Brent Baude <ranger@gentoo.org> xterm-250.ebuild:
  Marking xterm-250 ppc64 stable for bug 294958

  15 Dec 2009; Raúl Porcel <armin76@gentoo.org> xterm-243.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #282290

  14 Dec 2009; Rémi Cardona <remi@gentoo.org> xterm-242.ebuild,
  xterm-243.ebuild, xterm-250.ebuild, xterm-253.ebuild:
  change LICENSE to MIT

  10 Dec 2009; Christian Faulhammer <fauli@gentoo.org> xterm-250.ebuild:
  x86 stable, bug 294958

*xterm-253 (10 Dec 2009)

  10 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> +xterm-253.ebuild:
  Version bump.

  10 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> xterm-250.ebuild:
  amd64 stable wrt #294958

  26 Oct 2009; Tobias Klausmann <klausman@gentoo.org> xterm-243.ebuild:
  Stable on alpha, bug #282290

  26 Oct 2009; Jeroen Roovers <jer@gentoo.org> xterm-243.ebuild:
  Stable for HPPA (bug #282290).

*xterm-250 (26 Oct 2009)

  26 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> +xterm-250.ebuild:
  Version bump.

  11 Oct 2009; nixnut <nixnut@gentoo.org> xterm-243.ebuild:
  ppc stable #282290

  09 Oct 2009; Markus Meier <maekke@gentoo.org> xterm-243.ebuild: