@@ -1,6 +1,8 @@
 DIST xterm-250.tgz 889052 RMD160 f61dcfbb60d4645bb80ffdc5339d11a92885e895 SHA1 bf72e4ab4f6f7aeb27db9667df4a85e151546c90 SHA256 2dfdf63135f838d3ad11584f0da18360f993305733df4df3255b952067b4fb28
 DIST xterm-255.tgz 909928 RMD160 13519cebc0870e1bf8815bdf8a4bfaf42684a467 SHA1 09bd7afe42afd14e36b5467bc2e8b6bdb86102e0 SHA256 75d5eecd05093eef94dc0912f461bbcd7a706dedfefddc2998136a064c14284a
+DIST xterm-256.tgz 910462 RMD160 9e65fe15ea0e049a1626cb15ca357d2905bd48bc SHA1 e71abcc1c63ba56eeab004608abe926dcebd2aa6 SHA256 26a755934d6544ddfe58256cb1bf2ca11985ee71767ef25b4e7218e7510c7088
 EBUILD xterm-250.ebuild 1993 RMD160 8f3749f7ca24c6b7607f5bb3711f146aee53c093 SHA1 56c97a93bff7096ee1931698a4c98b00b2a0e79c SHA256 7aafca7adea95609663179993c87858f57b9b2d8fdfa27ada4fbfe9691e429e6
 EBUILD xterm-255.ebuild 2005 RMD160 9a32a8a17bd9876105f969f3fd0225ab4bf91c8b SHA1 c6a0fc118d0d712cdd5fbe481a338e3753b849ab SHA256 afc1be2d83d717e1a654a43265435530adc071222637bbd3fb105f78bccf1224
-MISC ChangeLog 38295 RMD160 c5f96b3848cd87c17c2c62a72c2022bbb54e6f98 SHA1 b87b3555a723d5756505f7329f582f15ed107345 SHA256 3a500034cc398a4a71b8c49fb80dc510d5d5085c1ae03fc381782e740744a617
+EBUILD xterm-256.ebuild 2005 RMD160 f760385fe4c9f9ee68d61138de947a3782f9304e SHA1 d17208c18eefa19979849798c5bf744919dfa26f SHA256 58a651c7449a41406680f06aa834c06b0c7f2141e764b8b268f197dc751f69df
+MISC ChangeLog 38411 RMD160 0a50af1737722f27f9d37d5f914a3669f419d3d0 SHA1 9389ce4a3c18b637f28550e95c8b2d0dbcf97b1a SHA256 ac80fb125098524574228b71dd77e573b571a027e3edbe8ce8294544a027cb9e
 MISC metadata.xml 429 RMD160 e6446bd38e29a16ec401640e7c06e3249c027bfa SHA1 64db85500803c328bd89acd2124ac7594dd9839f SHA256 9093fbdc5d374077cf0903a3b7b4aa0eeabc3e695226fa25e913079362ccfef9
